feat: add kafka communication